# wishgifthub-api/src/main/java/com/wishgifthub/entity/Invitation.java
@@ -45,6 +45,9 @@ public class Invitation {
     @Column(name = "avatar_id")
     private String avatarId;
 
+    @Column(name = "pseudo", length = 100)
+    private String pseudo;
+
     @Column(name = "created_at", nullable = false)
     private OffsetDateTime createdAt = OffsetDateTime.now();
 }
